--- a/app/views/features/ui.html.erb
+++ b/app/views/features/ui.html.erb
@@ -2,7 +2,7 @@
 
 <div class="menubar">
   <div class="sidebar-toggler visible-xs">
-    <i class="ion-navicon"></i>
+    <%= ion_icon('navicon') %>
   </div>
   
   <div class="page-title">
@@ -88,29 +88,29 @@
           <div class="get-started">
             <div class="row">
               <div class="col-md-4 animated fadeInDown">
-                <i class="ion-wrench"></i>
+                <%= ion_icon('wrench') %>
                 <%= link_to "Configure your account", "#" %>
               </div>
               <div class="col-md-4 animated fadeInDown two">
-                <i class="ion-person-stalker"></i>
+                <%= ion_icon('person-stalker') %>
                 <%= link_to "Invite your teammates", "#" %>
               </div>
               <div class="col-md-4 animated fadeInDown three">
-                <i class="ion-email"></i>
+                <%= ion_icon('email') %>
                 <%= link_to "Setup your notifications", "#" %>
               </div>
             </div>
             <div class="row">
               <div class="col-md-4 animated fadeInDown four">
-                <i class="ion-help-circled"></i>
+                <%= ion_icon('help-circled') %>
                 <%= link_to "Watch our tutorials", "#" %>
               </div>
               <div class="col-md-4 animated fadeInDown five">
-                <i class="ion-upload"></i>
+                <%= ion_icon('upload') %>
                 <%= link_to "Import your contacts", "#" %>
               </div>
               <div class="col-md-4 animated fadeInDown six">
-                <i class="ion-code-working"></i>
+                <%= ion_icon('code-working') %>
                 <%= link_to "Get your API Keys", "#" %>
               </div>
             </div>
