--- a/app/views/forms/wizard.html.erb
+++ b/app/views/forms/wizard.html.erb
@@ -3,7 +3,7 @@
 <div class="content-wrapper">
   <div class="header">
     <div class="sidebar-toggler visible-xs">
-      <i class="ion-navicon"></i>
+      <%= ion_icon('navicon') %>
     </div>
 
     <div class="steps clearfix">
@@ -151,7 +151,7 @@
       </div>
       <div class="step">
         <div class="success">
-          <i class="ion-checkmark-circled"></i>
+          <%= ion_icon('checkmark-circled') %>
           <h3>
             Your account has been configured successfully!
           </h3>
