--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -2,7 +2,7 @@
 
 <div class="menubar">
   <div class="sidebar-toggler visible-xs">
-    <i class="ion-navicon"></i>
+    <%= ion_icon('navicon') %>
   </div>
   
   <div class="page-title">
@@ -86,13 +86,13 @@
               </button>
               <div class="attach">
                 <%= link_to "#", data: { toggle: "tooltip" }, title: "Add location" %>
-                  <i class="ion-location"></i>
+                  <%= ion_icon('location') %>
                 <% end %>
                 <%= link_to "#", data: { toggle: "tooltip" }, title: "Add files" %>
-                  <i class="ion-paperclip"></i>
+                  <%= ion_icon('paperclip') %>
                 <% end %>
                 <%= link_to "#", data: { toggle: "tooltip" }, title: "Add a photo" %>
-                  <i class="ion-camera"></i>
+                  <%= ion_icon('camera') %>
                 <% end %>
               </div>
             </div>
