--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -2,7 +2,7 @@
 
 <div class="menubar">
   <div class="sidebar-toggler visible-xs">
-    <i class="ion-navicon"></i>
+    <%= ion_icon('navicon') %>
   </div>
 
   <div class="page-title">
@@ -18,7 +18,7 @@
   <div class="row project-list">
     <div class="project new">
       <%= link_to "#" do %>
-        <i class="ion-ios-plus-outline"></i>
+        <%= ion_icon('ios-plus-outline') %>
         <span class="info">
           Create a New Project
         </span>
