--- a/app/views/pages/steps.html.erb
+++ b/app/views/pages/steps.html.erb
@@ -2,7 +2,7 @@
 
 <div class="content-wrapper">
   <div class="sidebar-toggler visible-xs">
-    <i class="ion-navicon"></i>
+    <%= ion_icon('navicon') %>
   </div>
   
   <div class="header">
@@ -13,7 +13,7 @@
     <div class="step clearfix done">
       <div class="info">
         <span class="number">
-          <i class="ion-checkmark-circled"></i>
+          <%= ion_icon('checkmark-circled') %>
         </span>
         Connect your Stripe account or create a new one to start receiving payments
       </div>
@@ -25,7 +25,7 @@
     <div class="step clearfix done">
       <div class="info">
         <span class="number">
-          <i class="ion-checkmark-circled"></i>
+          <%= ion_icon('checkmark-circled') %>
         </span>
         Setup your email notification preferences for new payments
       </div>
