--- a/app/views/account/notifications.html.erb
+++ b/app/views/account/notifications.html.erb
@@ -2,32 +2,32 @@
 
 <div id="sidebar">
   <div class="sidebar-toggler visible-xs">
-    <i class="ion-navicon"></i>
+    <%= ion_icon('navicon') %>
   </div>
   
   <h3>My account</h3>
   <ul class="menu">
     <li>
       <%= link_to settings_account_index_path do %>
-        <i class="ion-ios-person-outline"></i>
+        <%= ion_icon('ios-person-outline') %>
         Profile
       <% end %>
     </li>
     <li>
       <%= link_to billing_account_index_path do %>
-        <i class="ion-card"></i>
+        <%= ion_icon('card') %>
         Billing
       <% end %>
     </li>
     <li>
       <%= link_to notifications_account_index_path, class: "active" do %>
-        <i class="ion-ios-email-outline"></i>
+        <%= ion_icon('ios-email-outline') %>
         Notifications
       <% end %>
     </li>
     <li>
       <%= link_to support_account_index_path do %>
-        <i class="ion-ios-help-outline"></i>
+        <%= ion_icon('ios-help-outline') %>
         Support
       <% end %>
     </li>
