--- a/app/views/account/support.html.erb
+++ b/app/views/account/support.html.erb
@@ -2,32 +2,32 @@
 
 <div id="sidebar">
   <div class="sidebar-toggler visible-xs">
-    <i class="ion-navicon"></i>
+    <%= ion_icon('navicon') %>
   </div>
   
   <h3>My account</h3>
   <ul class="menu">
     <li>
       <%= link_to settings_account_index_path do %>
-        <i class="ion-ios-person-outline"></i>
+        <%= ion_icon('ios-person-outline') %>
         Profile
       <% end %>
     </li>
     <li>
       <%= link_to billing_account_index_path do %>
-        <i class="ion-card"></i>
+        <%= ion_icon('card') %>
         Billing
       <% end %>
     </li>
     <li>
       <%= link_to notifications_account_index_path do %>
-        <i class="ion-ios-email-outline"></i>
+        <%= ion_icon('ios-email-outline') %>
         Notifications
       <% end %>
     </li>
     <li>
       <%= link_to support_account_index_path, class: "active" do %>
-        <i class="ion-ios-help-outline"></i>
+        <%= ion_icon('ios-help-outline') %>
         Support
       <% end %>
     </li>
@@ -46,7 +46,7 @@
     <div class="row topic">
       <div class="col-md-1 col-sm-2">
         <%= link_to "#" do %>
-          <i class="ion-person-stalker"></i>
+          <%= ion_icon('person-stalker') %>
         <% end %>
       </div>
       <div class="col-sm-9">
@@ -59,7 +59,7 @@
     <div class="row topic">
       <div class="col-md-1 col-sm-2">
         <%= link_to "#" do %>
-          <i class="ion-pie-graph"></i>
+          <%= ion_icon('pie-graph') %>
         <% end %>
       </div>
       <div class="col-sm-9">
@@ -73,7 +73,7 @@
     <div class="row topic">
       <div class="col-md-1 col-sm-2">
         <%= link_to "#" do %>
-          <i class="ion-archive"></i>
+          <%= ion_icon('archive') %>
         <% end %>
       </div>
       <div class="col-sm-9">
@@ -86,7 +86,7 @@
     <div class="row topic">
       <div class="col-md-1 col-sm-2">
         <%= link_to "#" do %>
-          <i class="ion-calendar"></i>
+          <%= ion_icon('calendar') %>
         <% end %>
       </div>
       <div class="col-sm-9">
@@ -99,7 +99,7 @@
     <div class="row topic">
       <div class="col-md-1 col-sm-2">
         <%= link_to "#" do %>
-          <i class="ion-camera"></i>
+          <%= ion_icon('camera') %>
         <% end %>
       </div>
       <div class="col-sm-9">
