--- a/app/views/pages/inbox.html.erb
+++ b/app/views/pages/inbox.html.erb
@@ -4,7 +4,7 @@
   <div class="scroll-wrapper">
     <div class="menubar relative">
       <div class="sidebar-toggler visible-xs">
-        <i class="ion-navicon"></i>
+        <%= ion_icon('navicon') %>
       </div>
       <form>
         <i class="fa fa-search"></i>
