--- a/app/views/pricing/charts.html.erb
+++ b/app/views/pricing/charts.html.erb
@@ -2,7 +2,7 @@
 
 <div class="content-wrapper">
   <div class="sidebar-toggler visible-xs">
-    <i class="ion-navicon"></i>
+    <%= ion_icon('navicon') %>
   </div>
   
   <div id="first-option">
