--- a/app/views/pricing/invoice.html.erb
+++ b/app/views/pricing/invoice.html.erb
@@ -2,7 +2,7 @@
 
 <div class="menubar">
   <div class="sidebar-toggler visible-xs">
-    <i class="ion-navicon"></i>
+    <%= ion_icon('navicon') %>
   </div>
   
   <div class="page-title">
