--- a/app/views/shared/_sidebar_menu.html.erb
+++ b/app/views/shared/_sidebar_menu.html.erb
@@ -30,13 +30,13 @@
   <ul>
     <li class="option">
     <%= link_to root_url, class: "active" do %>
-      <i class="ion-earth"></i>
+      <%= ion_icon('earth') %>
       <span>Dashboard</span>
     <% end %>
     </li>
     <li class="option">
     <%= link_to "#", data: { toggle: "sidebar" } do %>
-      <i class="ion-person-stalker"></i> <span>Lists & Tables</span>
+      <%= ion_icon('person-stalker') %> <span>Lists & Tables</span>
       <i class="fa fa-chevron-down"></i>
     <% end %>
     <ul class="submenu">
@@ -47,7 +47,7 @@
     </li>
     <li class="option">
     <%= link_to "#", data: { toggle: "sidebar" } do %>
-      <i class="ion-stats-bars"></i> <span>Reports</span>
+      <%= ion_icon('stats-bars') %> <span>Reports</span>
       <i class="fa fa-chevron-down"></i>
     <% end %>
     <ul class="submenu">
@@ -57,7 +57,7 @@
     </li>
     <li class="option">
     <%= link_to "#", data: { toggle: "sidebar" } do %>
-      <i class="ion-pricetags"></i> <span>Forms</span>
+      <%= ion_icon('pricetags') %> <span>Forms</span>
       <i class="fa fa-chevron-down"></i>
     <% end %>
     <ul class="submenu">
@@ -73,7 +73,7 @@
   <ul>
     <li class="option">
     <%= link_to "#", data: { toggle: "sidebar" } do %>
-      <i class="ion-earth"></i> <span>App Pages</span>
+      <%= ion_icon('earth') %> <span>App Pages</span>
       <i class="fa fa-chevron-down"></i>
     <% end %>
     <ul class="submenu">
@@ -87,7 +87,7 @@
     </li>
     <li class="option">
     <%= link_to "#", data: { toggle: "sidebar" } do %>
-      <i class="ion-card"></i> <span>Pricing</span>
+      <%= ion_icon('card') %> <span>Pricing</span>
       <i class="fa fa-chevron-down"></i>
     <% end %>
     <ul class="submenu">
@@ -99,7 +99,7 @@
     </li>
     <li class="option">
     <%= link_to "#", data: { toggle: "sidebar" } do %>
-      <i class="ion-flash"></i> <span>Features</span>
+      <%= ion_icon('flash') %> <span>Features</span>
       <i class="fa fa-chevron-down"></i>
     <% end %>
     <ul class="submenu">
@@ -119,7 +119,7 @@
   <ul>
     <li class="option">
     <%= link_to "#", data: { toggle: "sidebar" } do %>
-      <i class="ion-person"></i> <span>My account</span>
+      <%= ion_icon('person') %> <span>My account</span>
       <i class="fa fa-chevron-down"></i>
     <% end %>
     <ul class="submenu">
@@ -131,7 +131,7 @@
     </li>
     <li class="option">
     <%= link_to "#", data: { toggle: "sidebar" } do %>
-      <i class="ion-usb"></i> <span>Level Navigation</span>
+      <%= ion_icon('usb') %> <span>Level Navigation</span>
       <i class="fa fa-chevron-down"></i>
     <% end %>
     <ul class="submenu">
@@ -153,10 +153,10 @@
   </div>
   <div class="bottom-menu hidden-sm">
   <ul>
-    <li><%= link_to "<i class="ion-help"></i>", "#" %></li>
+    <li><%= link_to ion_icon('help'), "#" %></li>
     <li>
     <%= link_to "#" do %>
-      <i class="ion-archive"></i>
+      <%= ion_icon('archive') %>
       <span class="flag"></span>
     <% end %>
     <ul class="menu">
@@ -165,7 +165,7 @@
       <!-- <li><%= link_to "3 features added", "#" %></li> -->
     </ul>
     </li>
-    <li><%= link_to "<i class="ion-log-out"></i>", signin_features_path %></li>
+    <li><%= link_to ion_icon('log-out'), signin_features_path %></li>
   </ul>
   </div>
 </div>
