Icons replaced with helper call (Font Awesome)
converted by regex:
<i class="fa fa-(.*)"><\/i>   to   <%= fa_icon('$1') %>

--- a/app/views/features/email_templates.html.erb
+++ b/app/views/features/email_templates.html.erb
@@ -18,7 +18,7 @@
   <div class="emails">
     <div class="email">
       <div class="wrapper">
-        <i class="fa fa-search-plus"></i>
+        <%= fa_icon('search-plus') %>
         <%= image_tag "emails/welcome.png" %>
       </div>
       <div class="name">
@@ -27,7 +27,7 @@
     </div>
     <div class="email">
       <div class="wrapper">
-        <i class="fa fa-search-plus"></i>
+        <%= fa_icon('search-plus') %>
         <%= image_tag "emails/notification.png" %>
       </div>
       <div class="name">
@@ -36,7 +36,7 @@
     </div>
     <div class="email">
       <div class="wrapper">
-        <i class="fa fa-search-plus"></i>
+        <%= fa_icon('search-plus') %>
         <%= image_tag "emails/invoice.jpg" %>
       </div>
       <div class="name">
@@ -45,7 +45,7 @@
     </div>
     <div class="email">
       <div class="wrapper">
-        <i class="fa fa-search-plus"></i>
+        <%= fa_icon('search-plus') %>
         <%= image_tag "emails/activation.png" %>
       </div>
       <div class="name">
