--- a/app/views/features/status.html.erb
+++ b/app/views/features/status.html.erb
@@ -7,7 +7,7 @@
           ← Return to admin
         <% end %>
         <%= link_to "#", class: "pull-right" do %>
-          <i class="fa fa-rss"></i>
+          <%= fa_icon('rss') %>
           Subscribe to notifications
         <% end %>
       </header>
