--- a/app/views/forms/new_product.html.erb
+++ b/app/views/forms/new_product.html.erb
@@ -54,7 +54,7 @@
       <label class="col-sm-2 col-md-2 control-label">
         SKU
         <span class="help" data-toggle="tooltip" title="The Stock Keeping Unit">
-          <i class="fa fa-question-circle"></i>
+          <%= fa_icon('question-circle') %>
         </span>
       </label>
       <div class="col-sm-10 col-md-8">
@@ -125,7 +125,7 @@
       <label for="inputPassword3" class="col-sm-2 col-md-2 control-label">Specific publish date</label>
       <div class="col-sm-10 col-md-8">
         <div class="input-group">
-            <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+            <span class="input-group-addon"><%= fa_icon('calendar') %></span>
             <input type="text" class="form-control datepicker" placeholder="03/05/2014" />
         </div>
       </div>
