--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,7 +13,7 @@
     <form class="input-daterange">
       <div class="input-group input-group-sm">
         <span class="input-group-addon">
-        <i class="fa fa-calendar-o"></i>
+        <%= fa_icon('calendar-o') %>
         </span>
         <input name="start" type="text" class="form-control datepicker" placeholder="02/27/2014" />
       </div>
@@ -22,7 +22,7 @@
 
       <div class="input-group input-group-sm">
         <span class="input-group-addon">
-        <i class="fa fa-calendar-o"></i>
+        <%= fa_icon('calendar-o') %>
         </span>
         <input name="end" type="text" class="form-control datepicker" placeholder="02/27/2014" />
       </div>
@@ -58,7 +58,7 @@
     12,958 total
     
     <div class="change up">
-      <i class="fa fa-chevron-up"></i>
+      <%= fa_icon('chevron-up') %>
       10%
     </div>
     </div>
@@ -75,7 +75,7 @@
       $3,124.00 total
       
       <div class="change up">
-      <i class="fa fa-chevron-up"></i>
+      <%= fa_icon('chevron-up') %>
       6.5%
       </div>
     </div>
@@ -90,7 +90,7 @@
       1,402 total
       
       <div class="change down">
-      <i class="fa fa-chevron-down"></i>
+      <%= fa_icon('chevron-down') %>
       3.5%
       </div>
     </div>
