--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -19,7 +19,7 @@
       <div class="arrow"></div>
       <div class="arrow_border"></div>
     </div>
-    <i class="fa fa-times"></i>
+    <%= fa_icon('times') %>
     <h5>New event popup example</h5>
     <form>
       <div class="field">
