--- a/app/views/pages/inbox.html.erb
+++ b/app/views/pages/inbox.html.erb
@@ -7,7 +7,7 @@
         <%= ion_icon('navicon') %>
       </div>
       <form>
-        <i class="fa fa-search"></i>
+        <%= fa_icon('search') %>
         <input type="text" class="form-control" placeholder="Search messages..." />
       </form>
     </div>
@@ -180,10 +180,10 @@
     </div>
     <div class="paging">
       <a class="disabled left" href="#" data-toggle="tooltip" data-placement="top" title="Previous page">
-        <i class="fa fa-chevron-left"></i>
+        <%= fa_icon('chevron-left') %>
       </a>
       <a class="right" href="#" data-toggle="tooltip" data-placement="top" title="Next page">
-        <i class="fa fa-chevron-right"></i>
+        <%= fa_icon('chevron-right') %>
       </a>
     </div>
   </div>
@@ -196,9 +196,9 @@
         Good design is good business
       </div>
       <div class="paging">
-        <a class="left" href="#" data-toggle="tooltip" data-placement="bottom" title="Previous message"><i class="fa fa-chevron-left"></i></a>
-        <a class="right" href="#" data-toggle="tooltip" data-placement="bottom" title="Next message"><i class="fa fa-chevron-right"></i></a>
-        <a class="trash" href="#" data-toggle="tooltip" data-placement="bottom" title="Delete"><i class="fa fa-trash-o"></i></a>
+        <a class="left" href="#" data-toggle="tooltip" data-placement="bottom" title="Previous message"><%= fa_icon('chevron-left') %></a>
+        <a class="right" href="#" data-toggle="tooltip" data-placement="bottom" title="Next message"><%= fa_icon('chevron-right') %></a>
+        <a class="trash" href="#" data-toggle="tooltip" data-placement="bottom" title="Delete"><%= fa_icon('trash-o') %></a>
       </div>
     </div>
 
