--- a/app/views/pages/latest_activity.html.erb
+++ b/app/views/pages/latest_activity.html.erb
@@ -30,7 +30,7 @@
     <div class="row event clearfix">
       <div class="col-sm-1">
         <div class="icon">
-          <i class="fa fa-comment"></i>
+          <%= fa_icon('comment') %>
         </div>
       </div>
       <div class="col-sm-11 message">
@@ -45,7 +45,7 @@
     <div class="row event clearfix">
       <div class="col-sm-1">
         <div class="icon violet">
-          <i class="fa fa-upload"></i>
+          <%= fa_icon('upload') %>
         </div>
       </div>
       <div class="col-sm-11 message">
@@ -84,7 +84,7 @@
     <div class="row event clearfix">
       <div class="col-sm-1">
         <div class="icon purple">
-          <i class="fa fa-quote-left"></i>
+          <%= fa_icon('quote-left') %>
         </div>
       </div>
       <div class="col-sm-11 message">
@@ -103,7 +103,7 @@
     <div class="row event clearfix">
       <div class="col-sm-1">
         <div class="icon violet">
-          <i class="fa fa-upload"></i>
+          <%= fa_icon('upload') %>
         </div>
       </div>
       <div class="col-sm-11 message">
@@ -128,7 +128,7 @@
     <div class="row event clearfix">
       <div class="col-sm-1">
         <div class="icon">
-          <i class="fa fa-comment"></i>
+          <%= fa_icon('comment') %>
         </div>
       </div>
       <div class="col-sm-11 message">
@@ -151,7 +151,7 @@
     <div class="row event clearfix">
       <div class="col-sm-1">
         <div class="icon">
-          <i class="fa fa-comment"></i>
+          <%= fa_icon('comment') %>
         </div>
       </div>
       <div class="col-sm-11 message">
@@ -169,7 +169,7 @@
     <div class="row event clearfix">
       <div class="col-sm-1">
         <div class="icon yellow">
-          <i class="fa fa-check"></i>
+          <%= fa_icon('check') %>
         </div>
       </div>
       <div class="col-sm-11 message">
@@ -184,7 +184,7 @@
     <div class="row event clearfix">
       <div class="col-sm-1">
         <div class="icon dark">
-          <i class="fa fa-files-o"></i>
+          <%= fa_icon('files-o') %>
         </div>
       </div>
       <div class="col-sm-11 message">
@@ -203,7 +203,7 @@
     <div class="row event clearfix">
       <div class="col-sm-1">
         <div class="icon">
-          <i class="fa fa-comment"></i>
+          <%= fa_icon('comment') %>
         </div>
       </div>
       <div class="col-sm-11 message">
@@ -218,7 +218,7 @@
     <div class="row event clearfix">
       <div class="col-sm-1">
         <div class="icon violet">
-          <i class="fa fa-upload"></i>
+          <%= fa_icon('upload') %>
         </div>
       </div>
       <div class="col-sm-11 message">
@@ -257,7 +257,7 @@
     <div class="row event clearfix">
       <div class="col-sm-1">
         <div class="icon purple">
-          <i class="fa fa-quote-left"></i>
+          <%= fa_icon('quote-left') %>
         </div>
       </div>
       <div class="col-sm-11 message">
