--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -19,8 +19,8 @@
       <div class="name">Karen Matthews</div>
       <div class="position">Client</div>
       <div class="social">
-        <%= link_to "<i class="fa fa-facebook"></i>", "#" %>
-        <%= link_to "<i class="fa fa-twitter"></i>", "#" %>
+        <%= link_to fa_icon('facebook'), "#" %>
+        <%= link_to fa_icon('twitter'), "#" %>
       </div>
     </div>
     <div class="main-details clearfix">
