--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -39,7 +39,7 @@
         <%= image_tag "avatars/15.jpg" %>
         
         <%= link_to "#", class: "add-more" do %>
-          <i class="fa fa-plus"></i>
+          <%= fa_icon('plus') %>
         <% end %>
         <ul class="menu">
           <li><%= link_to "Invite a new user", "#" %></li>
@@ -62,7 +62,7 @@
         <%= image_tag "avatars/10.jpg" %>
 
         <%= link_to "#", class: "add-more" do %>
-          <i class="fa fa-plus"></i>
+          <%= fa_icon('plus') %>
         <% end %>
         <ul class="menu">
           <li><%= link_to "Invite a new user", "#" %></li>
@@ -86,7 +86,7 @@
         <%= image_tag "avatars/16.jpg" %>
 
         <%= link_to "#", class: "add-more" do %>
-          <i class="fa fa-plus"></i>
+          <%= fa_icon('plus') %>
         <% end %>
         <ul class="menu">
           <li><%= link_to "Invite a new user", "#" %></li>
@@ -110,7 +110,7 @@
         <%= image_tag "avatars/17.jpg" %>
 
         <%= link_to "#", class: "add-more" do %>
-          <i class="fa fa-plus"></i>
+          <%= fa_icon('plus') %>
         <% end %>
         <ul class="menu">
           <li><%= link_to "Invite a new user", "#" %></li>
@@ -132,7 +132,7 @@
         <img src="https://s3.amazonaws.com/uifaces/faces/twitter/krystalfister/128.jpg" />
 
         <%= link_to "#", class: "add-more" do %>
-          <i class="fa fa-plus"></i>
+          <%= fa_icon('plus') %>
         <% end %>
         <ul class="menu">
           <li><%= link_to "Invite a new user", "#" %></li>
@@ -155,7 +155,7 @@
         <%= image_tag "avatars/13.jpg" %>
 
         <%= link_to "#", class: "add-more" do %>
-          <i class="fa fa-plus"></i>
+          <%= fa_icon('plus') %>
         <% end %>
         <ul class="menu">
           <li><%= link_to "Invite a new user", "#" %></li>
