--- a/app/views/reports/orders.html.erb
+++ b/app/views/reports/orders.html.erb
@@ -9,8 +9,8 @@
     Reports
   </div>
   <div class="options pull-right">
-    <%= link_to "<i class="fa fa-print"></i> Print", "#" %>
-    <%= link_to "<i class="fa fa-download"></i> Download", "#" %>
+    <%= link_to "#{fa_icon('print')} Print", "#" %>
+    <%= link_to "#{fa_icon('download')} Download", "#" %>
   </div>
 </div>
 
@@ -21,7 +21,7 @@
       <div class="value">
         512,928
         <div class="change up">
-          <i class="fa fa-caret-up"></i>
+          <%= fa_icon('caret-up') %>
           15%
         </div>
       </div>
@@ -31,7 +31,7 @@
       <div class="value">
         1,890,344
         <div class="change down">
-          <i class="fa fa-caret-down"></i>
+          <%= fa_icon('caret-down') %>
           4%
         </div>
       </div>
@@ -41,7 +41,7 @@
       <div class="value">
         3,045
         <div class="change up">
-          <i class="fa fa-caret-up"></i>
+          <%= fa_icon('caret-up') %>
           5%
         </div>
       </div>
@@ -51,7 +51,7 @@
       <div class="value">
         834
         <div class="change up">
-          <i class="fa fa-caret-up"></i>
+          <%= fa_icon('caret-up') %>
           9%
         </div>
       </div>
