--- a/app/views/forms/wizard.html.erb
+++ b/app/views/forms/wizard.html.erb
@@ -52,7 +52,7 @@
           </div>
           <div class="form-group form-actions">
             <button type="submit" class="button" data-step="2">
-              <span>Next Step <i class="fa fa-angle-double-right"></i></span>
+              <span>Next Step <%= fa_icon('angle-double-right') %></span>
             </button>
           </div>
       </div>
@@ -102,10 +102,10 @@
         </div>
           <div class="form-group form-actions">
             <a class="button" href="#" data-step="1">
-              <span><i class="fa fa-angle-double-left"></i> Back</span>
+              <span><%= fa_icon('angle-double-left') %> Back</span>
             </a>
             <button type="submit" class="button" data-step="3">
-              <span>Next Step <i class="fa fa-angle-double-right"></i></span>
+              <span>Next Step <%= fa_icon('angle-double-right') %></span>
             </button>
           </div>
       </div>
@@ -142,10 +142,10 @@
         </div>
           <div class="form-group form-actions">
             <a class="button" href="#" data-step="2">
-              <span><i class="fa fa-angle-double-left"></i> Back</span>
+              <span><%= fa_icon('angle-double-left') %> Back</span>
             </a>
             <button type="submit" class="button" data-step="4">
-              <span>Make payment <i class="fa fa-angle-double-right"></i></span>
+              <span>Make payment <%= fa_icon('angle-double-right') %></span>
             </button>
           </div>
       </div>
