--- a/app/views/pricing/form.html.erb
+++ b/app/views/pricing/form.html.erb
@@ -14,7 +14,7 @@
   <div class="billing">
     <div class="secure clearfix">
       <span class="lock pull-left">
-        <i class="fa fa-lock"></i>
+        <%= fa_icon('lock') %>
         Secure Billing Form
       </span>
       <div class="accepted-cards pull-right">
@@ -76,7 +76,7 @@
         <div class="action clearfix">
         <%= link_to "#", class: "btn btn-success" do %>
           Make payment $250.00
-          <i class="fa fa-chevron-right"></i>
+          <%= fa_icon('chevron-right') %>
         <% end %>
       </div>
     </form>
