--- a/app/views/features/ui.html.erb
+++ b/app/views/features/ui.html.erb
@@ -116,7 +116,7 @@
             </div>
           </div>
 
-          <%= link_to "#" data: { dismiss: "modal" }, class: "go-dashboard" do %>
+          <%= link_to "#", data: { dismiss: "modal" }, class: "go-dashboard" do %>
             Just go straight to my dashboard
             <%= fa_icon('angle-double-right') %>
           <% end %>
