--- a/app/views/lists/products.html.erb
+++ b/app/views/lists/products.html.erb
@@ -12,8 +12,8 @@
     </small>
   </div>
   <div class="options pull-right">
-    <%= link_to "#{fa_icon('print')} Print", "#" %>
-    <%= link_to "#{fa_icon('download')} Download CSV", "#" %>
+    <%= link_to fa_icon('print', text: "Print"), "#" %>
+    <%= link_to fa_icon('download', text: "Download CSV"), "#" %>
   </div>
 </div>
 
