--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -85,13 +85,13 @@
                 <span>Submit note</span>
               </button>
               <div class="attach">
-                <%= link_to "#", data: { toggle: "tooltip" }, title: "Add location" %>
+                <%= link_to "#", data: { toggle: "tooltip" }, title: "Add location" do %>
                   <%= ion_icon('location') %>
                 <% end %>
-                <%= link_to "#", data: { toggle: "tooltip" }, title: "Add files" %>
+                <%= link_to "#", data: { toggle: "tooltip" }, title: "Add files" do %>
                   <%= ion_icon('paperclip') %>
                 <% end %>
-                <%= link_to "#", data: { toggle: "tooltip" }, title: "Add a photo" %>
+                <%= link_to "#", data: { toggle: "tooltip" }, title: "Add a photo" do %>
                   <%= ion_icon('camera') %>
                 <% end %>
               </div>
