--- a/app/views/pricing/invoice.html.erb
+++ b/app/views/pricing/invoice.html.erb
@@ -9,8 +9,8 @@
     Invoice <strong>#097294</strong>
   </div>
   <div class="options pull-right">
-    <%= link_to "#{fa_icon('print')} Print", "#" %>
-    <%= link_to "#{fa_icon('download')} Download", "#" %>
+    <%= link_to fa_icon('print', text: "Print"), "#" %>
+    <%= link_to fa_icon('download', text: "Download"), "#" %>
   </div>
 </div>
 
