--- a/app/views/pricing/plans.html.erb
+++ b/app/views/pricing/plans.html.erb
@@ -173,7 +173,7 @@
           </div>
 
           <div class="action clearfix">
-            <%= link_to "#" data: { step: "0" }, class: "btn btn-default pull-left" do %>
+            <%= link_to "#", data: { step: "0" }, class: "btn btn-default pull-left" do %>
               <%= fa_icon('chevron-left') %>
               Plans
             <% end %>
