--- a/app/views/reports/sales.html.erb
+++ b/app/views/reports/sales.html.erb
@@ -9,8 +9,8 @@
     Reports / Sales this Year by Month
   </div>
   <div class="options pull-right hidden-xs">
-    <%= link_to "#{fa_icon('print')} Print", "#" %>
-    <%= link_to "#{fa_icon('download')} Download", "#" %>
+    <%= link_to fa_icon('print', text: "Print"), "#" %>
+    <%= link_to fa_icon('download', text: "Download"), "#" %>
   </div>
   <div class="date-range pull-right">
     <div class="input-group input-group-sm">
