--- a/app/views/reports/orders.html.erb
+++ b/app/views/reports/orders.html.erb
@@ -9,8 +9,8 @@
     Reports
   </div>
   <div class="options pull-right">
-    <%= link_to "#{fa_icon('print')} Print", "#" %>
-    <%= link_to "#{fa_icon('download')} Download", "#" %>
+    <%= link_to fa_icon('print', text: "Print"), "#" %>
+    <%= link_to fa_icon('download', text: "Download"), "#" %>
   </div>
 </div>
 
