--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,32 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Wolf - Bootstrap Admin Theme</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-    <%= csrf_meta_tags %>
-
-    <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-</head>
+<%= render layout: 'layouts/base' do %>
 <body id="<%= yield :body_id %>">
-  
   <div id="wrapper">
-  
-    <%= render "shared/sidebar_menu" %>
+    <%= render partial: 'shared/sidebar_menu' %>
 
     <div id="content">
+      <%= render partial: 'shared/flashes' %>
       <%= yield %>
     </div>
   </div>
 
-  <%= render "shared/skin_switcher" %>
-
   <%= yield :bottom_content %>
 </body>
-</html>
+<% end %>
