--- a/app/views/layouts/_base.html.erb
+++ b/app/views/layouts/_base.html.erb
@@ -9,8 +9,8 @@
   <%= meta_tag 'robots', 'noindex, nofollow, noarchive' unless Rails.env.production? %>
   <%= meta_tag 'viewport', 'width=device-width, initial-scale=1.0' %>
   <%= meta_tag 'X-UA-Compatible', 'IE=edge' %>
-  <%= favicon_link_tag 'favicon.png', rel: 'apple-touch-icon', type: 'image/png' %>
-  <%= favicon_link_tag 'favicon.png', rel: 'shortcut icon', type: 'image/x-icon' %>
+  <%= favicon_link_tag 'favicon.ico', rel: 'apple-touch-icon', type: 'image/x-icon' %>
+  <%= favicon_link_tag 'favicon.ico', rel: 'shortcut icon', type: 'image/x-icon' %>
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 
