--- a/app/views/shared/_sidebar_menu.html.erb
+++ b/app/views/shared/_sidebar_menu.html.erb
@@ -1,153 +1,116 @@
 <div id="sidebar-default" class="main-sidebar fix-scroll">
   <div class="current-user">
     <%= link_to "#", class: "name" do %>
-    <%= image_tag "avatars/1.jpg", class: "avatar" %>
-    <span>
-      John Smith
-      <%= fa_icon('chevron-down') %>
-    </span>
+      <%= image_tag "avatars/1.jpg", class: "avatar" %>
+      <span>
+        <%= fa_icon('chevron-down', text: "John Smith", reverse: true) %>
+      </span>
     <% end %>
+    
     <ul class="menu">
-    <li>
-      <%= link_to "Account settings", settings_account_index_path %>
-    </li>
-    <li>
-      <%= link_to "Billing", billing_account_index_path %>
-    </li>
-    <li>
-      <%= link_to "Notifications", notifications_account_index_path %>
-    </li>
-    <li>
-      <%= link_to "Help / Support", support_account_index_path %>
-    </li>
-    <li>
-      <%= link_to "Sign out", signin_features_path %>
-    </li>
+      <li><%= nav_link "Account settings", settings_account_index_path %></li>
+      <li><%= nav_link "Billing", billing_account_index_path %></li>
+      <li><%= nav_link "Notifications", notifications_account_index_path %></li>
+      <li><%= nav_link "Help / Support", support_account_index_path %></li>
+      <li><%= nav_link "Sign out", signin_features_path %></li>
     </ul>
   </div>
+  
   <div class="menu-section">
   <h3>General</h3>
   <ul>
     <li class="option">
-    <%= link_to root_url, class: "active" do %>
-      <%= ion_icon('earth') %>
-      <span>Dashboard</span>
-    <% end %>
+      <%= nav_link ion_icon('earth', text: content_tag(:span, 'Dashboard')), root_url %>
     </li>
     <li class="option">
-    <%= link_to "#", data: { toggle: "sidebar" } do %>
-      <%= ion_icon('person-stalker') %> <span>Lists & Tables</span>
-      <%= fa_icon('chevron-down') %>
-    <% end %>
-    <ul class="submenu">
-      <li><%= link_to "Customers list", users_lists_path %></li>
-      <li><%= link_to "Orders (Datatables)", datatables_lists_path %></li>
-      <li><%= link_to "Products (Filters)", products_lists_path %></li>
-    </ul>
+      <%= nav_link ion_icon('person-stalker', text: content_tag(:span, 'Lists & Tables')) + fa_icon('chevron-down'), "#", condition: controller?('lists'), data: { toggle: "sidebar" } %>
+      <ul class="submenu">
+        <li><%= nav_link "Customers list", users_lists_path %></li>
+        <li><%= nav_link "Orders (Datatables)", datatables_lists_path %></li>
+        <li><%= nav_link "Products (Filters)", products_lists_path %></li>
+      </ul>
     </li>
     <li class="option">
-    <%= link_to "#", data: { toggle: "sidebar" } do %>
-      <%= ion_icon('stats-bars') %> <span>Reports</span>
-      <%= fa_icon('chevron-down') %>
-    <% end %>
-    <ul class="submenu">
-      <li><%= link_to "Reports orders", orders_reports_path %></li>
-      <li><%= link_to "Report sales", sales_reports_path %></li>
-    </ul>
+      <%= nav_link ion_icon('stats-bars', text: content_tag(:span, 'Reports')) + fa_icon('chevron-down'), "#", condition: controller?('reports'), data: { toggle: "sidebar" } %>
+      <ul class="submenu">
+        <li><%= nav_link "Reports orders", orders_reports_path %></li>
+        <li><%= nav_link "Report sales", sales_reports_path %></li>
+      </ul>
     </li>
     <li class="option">
-    <%= link_to "#", data: { toggle: "sidebar" } do %>
-      <%= ion_icon('pricetags') %> <span>Forms</span>
-      <%= fa_icon('chevron-down') %>
-    <% end %>
-    <ul class="submenu">
-      <li><%= link_to "New Customer (validation)", new_customer_forms_path %></li>
-      <li><%= link_to "New Product (add-ons)", new_product_forms_path %></li>
-      <li><%= link_to "Wizard", wizard_forms_path %></li>
-    </ul>
+      <%= nav_link ion_icon('pricetags', text: content_tag(:span, 'Forms')) + fa_icon('chevron-down'), "#", condition: controller?('forms'), data: { toggle: "sidebar" } %>
+      <ul class="submenu">
+        <li><%= nav_link "New Customer (validation)", new_customer_forms_path %></li>
+        <li><%= nav_link "New Product (add-ons)", new_product_forms_path %></li>
+        <li><%= nav_link "Wizard", wizard_forms_path %></li>
+      </ul>
     </li>
   </ul>
   </div>
+  
   <div class="menu-section">
   <h3>Application</h3>
   <ul>
     <li class="option">
-    <%= link_to "#", data: { toggle: "sidebar" } do %>
-      <%= ion_icon('earth') %> <span>App Pages</span>
-      <%= fa_icon('chevron-down') %>
-    <% end %>
-    <ul class="submenu">
-      <li><%= link_to "Inbox Messages", inbox_pages_path %></li>
-      <li><%= link_to "User profile", profile_pages_path %></li>
-      <li><%= link_to "Latest activity", latest_activity_pages_path %></li>
-      <li><%= link_to "Projects", projects_pages_path %></li>
-      <li><%= link_to "Steps to launch", steps_pages_path %></li>
-      <li><%= link_to "Calendar", calendar_pages_path %></li>
-    </ul>
+      <%= nav_link ion_icon('earth', text: content_tag(:span, 'App Pages')) + fa_icon('chevron-down'), "#", condition: controller?('pages'), data: { toggle: "sidebar" } %>
+      <ul class="submenu">
+        <li><%= nav_link "Inbox Messages", inbox_pages_path %></li>
+        <li><%= nav_link "User profile", profile_pages_path %></li>
+        <li><%= nav_link "Latest activity", latest_activity_pages_path %></li>
+        <li><%= nav_link "Projects", projects_pages_path %></li>
+        <li><%= nav_link "Steps to launch", steps_pages_path %></li>
+        <li><%= nav_link "Calendar", calendar_pages_path %></li>
+      </ul>
     </li>
     <li class="option">
-    <%= link_to "#", data: { toggle: "sidebar" } do %>
-      <%= ion_icon('card') %> <span>Pricing</span>
-      <%= fa_icon('chevron-down') %>
-    <% end %>
-    <ul class="submenu">
-      <li><%= link_to "Pricing (Plans)", plans_pricing_index_path %></li>
-      <li><%= link_to "Pricing charts", charts_pricing_index_path %></li>
-      <li><%= link_to "Billing form", form_pricing_index_path %></li>
-      <li><%= link_to "Invoice", invoice_pricing_index_path %></li>
-    </ul>
+      <%= nav_link ion_icon('card', text: content_tag(:span, 'Pricing')) + fa_icon('chevron-down'), "#", condition: controller?('pricing'), data: { toggle: "sidebar" } %>
+      <ul class="submenu">
+        <li><%= nav_link "Pricing (Plans)", plans_pricing_index_path %></li>
+        <li><%= nav_link "Pricing charts", charts_pricing_index_path %></li>
+        <li><%= nav_link "Billing form", form_pricing_index_path %></li>
+        <li><%= nav_link "Invoice", invoice_pricing_index_path %></li>
+      </ul>
     </li>
     <li class="option">
-    <%= link_to "#", data: { toggle: "sidebar" } do %>
-      <%= ion_icon('flash') %> <span>Features</span>
-      <%= fa_icon('chevron-down') %>
-    <% end %>
-    <ul class="submenu">
-      <li><%= link_to "Email templates", email_templates_features_path %></li>
-      <li><%= link_to "Gallery", gallery_features_path %></li>
-      <li><%= link_to "UI Extras", ui_features_path, data: { 'no-turbolink' => nil } %></li>
-      <li><%= link_to "API Documentation", api_features_path %></li>
-      <li><%= link_to "Sign up", signup_features_path %></li>
-      <li><%= link_to "Sign in", signin_features_path %></li>
-      <li><%= link_to "App Status", status_features_path %></li>
-    </ul>
+      <%= nav_link ion_icon('flash', text: content_tag(:span, 'Features')) + fa_icon('chevron-down'), "#", condition: controller?('features'), data: { toggle: "sidebar" } %>
+      <ul class="submenu">
+        <li><%= nav_link "Email templates", email_templates_features_path %></li>
+        <li><%= nav_link "Gallery", gallery_features_path %></li>
+        <li><%= nav_link "UI Extras", ui_features_path, data: { 'no-turbolink' => nil } %></li>
+        <li><%= nav_link "API Documentation", api_features_path %></li>
+        <li><%= nav_link "Sign up", signup_features_path %></li>
+        <li><%= nav_link "Sign in", signin_features_path %></li>
+        <li><%= nav_link "App Status", status_features_path %></li>
+      </ul>
     </li>
   </ul>
   </div>
+  
   <div class="menu-section">
   <h3>Admin</h3>
   <ul>
     <li class="option">
-    <%= link_to "#", data: { toggle: "sidebar" } do %>
-      <%= ion_icon('person') %> <span>My account</span>
-      <%= fa_icon('chevron-down') %>
-    <% end %>
-    <ul class="submenu">
-      <li><%= link_to "Settings", settings_account_index_path %></li>
-      <li><%= link_to "Billing", billing_account_index_path %></li>
-      <li><%= link_to "Notifications", notifications_account_index_path %></li>
-      <li><%= link_to "Support", support_account_index_path %></li>
-    </ul>
+      <%= nav_link ion_icon('person', text: content_tag(:span, 'My account')) + fa_icon('chevron-down'), "#", condition: controller?('account'), data: { toggle: "sidebar" } %>
+      <ul class="submenu">
+        <li><%= nav_link "Settings", settings_account_index_path %></li>
+        <li><%= nav_link "Billing", billing_account_index_path %></li>
+        <li><%= nav_link "Notifications", notifications_account_index_path %></li>
+        <li><%= nav_link "Support", support_account_index_path %></li>
+      </ul>
     </li>
     <li class="option">
-    <%= link_to "#", data: { toggle: "sidebar" } do %>
-      <%= ion_icon('usb') %> <span>Level Navigation</span>
-      <%= fa_icon('chevron-down') %>
-    <% end %>
-    <ul class="submenu">
-      <li>
-      <%= link_to "invoice.html", data: { toggle: "sidebar" } do %>
-        Submenu
-        <%= fa_icon('chevron-down') %>
-      <% end %>
+      <%= link_to ion_icon('usb', text: content_tag(:span, 'Level Navigation')) + fa_icon('chevron-down'), "#", data: { toggle: "sidebar" } %>
       <ul class="submenu">
-        <li><%= link_to "Last menu", "#" %></li>
-        <li><%= link_to "Last menu", "#" %></li>
+        <li>
+        <%= link_to fa_icon('chevron-down', text: 'Submenu', reverse: true), "invoice.html", data: { toggle: "sidebar" } %>
+        <ul class="submenu">
+          <li><%= link_to "Last menu", "#" %></li>
+          <li><%= link_to "Last menu", "#" %></li>
+        </ul>
+        </li>
+        <li><%= link_to "Menu link", "#" %></li>
+        <li><%= link_to "Extra link", "#" %></li>
       </ul>
-      </li>
-      <li><%= link_to "Menu link", "#" %></li>
-      <li><%= link_to "Extra link", "#" %></li>
-    </ul>
     </li>
   </ul>
   </div>
@@ -155,15 +118,12 @@
   <ul>
     <li><%= link_to ion_icon('help'), "#" %></li>
     <li>
-    <%= link_to "#" do %>
-      <%= ion_icon('archive') %>
-      <span class="flag"></span>
-    <% end %>
-    <ul class="menu">
-      <li><%= link_to "5 unread messages", "#" %></li>
-      <li><%= link_to "12 tasks completed", "#" %></li>
-      <!-- <li><%= link_to "3 features added", "#" %></li> -->
-    </ul>
+      <%= link_to ion_icon('archive', text: content_tag(:span, nil, class: 'flag')), "#" %>
+      <ul class="menu">
+        <li><%= link_to "5 unread messages", "#" %></li>
+        <li><%= link_to "12 tasks completed", "#" %></li>
+        <!-- <li><%= link_to "3 features added", "#" %></li> -->
+      </ul>
     </li>
     <li><%= link_to ion_icon('log-out'), signin_features_path %></li>
   </ul>
